# ai-garage

./: .gitignore  README.md  pyproject.toml
airbnb-agent/: README.md  analysis.py  pyproject.toml
autogen-system-design-agent/: README.md  app.py  system_design_summary.md
autogen-system-design-agent/sample_systems_designed/: lightweight_youtube_clone_design.md  web_crawler_design_document.md
contract-clarity-agent/: .env.example  .gitignore  CONTRIBUTING.md  README.md  app.py  example.py  pyproject.toml  requirements.txt
contract-clarity-agent/references/: contract_clarity_prd.md
contract-clarity-agent/src/: __init__.py  agent.py  document_processor.py
data-analyst-agent-autogen/: .env.example  .gitignore  README.md  app.py  assistants.py  pyproject.toml
diagram-generator/: .env.example  README.md  app.py  llm.py  prompts.py  utils.py
finetuning-phi-4-on-medical-reasoning/: Phi-4-Finetuning-on-Medical-Reasoning.ipynb
job-description-based-resume-optimizer/: .gitignore  README.md  analysis.ipynb  pyproject.toml
job-description-based-resume-optimizer/resume_optimizer_crew/: crew.py
job-description-based-resume-optimizer/resume_optimizer_crew/config/: agents.yaml  tasks.yaml
job-description-based-resume-optimizer/src/: .env.example  analysis.ipynb  app.py  crewai_flow.html  resume_optimization_flow.py  utils.py
job-description-based-resume-optimizer/src/resume_optimizer_crew/: crew.py  main.py  types.py
job-description-based-resume-optimizer/src/resume_optimizer_crew/config/: agents_resume_analysis.yaml  agents_resume_optimization.yaml  tasks_resume_analysis.yaml  tasks_resume_optimization.yaml
job-description-based-resume-optimizer/src/resume_optimizer_crew/tools/: resume_optimization_tools.py
job-description-based-resume-optimizer/src/sample_resume/: JohnGonalez_PythonDeveloper.docx
job-description-based-resume-optimizer/src/sample_resume/JonathanWhitmore_DataScience/: resume_aligned.md  resume_analysis.json  resume_original.md
mcp-agent/: README.md  pyproject.toml
mcp-agent/financial_data_mcp_server/: .env.example  README.md  financial-data-api.txt  mcp_server.py
mcp-agent/mcp_client/: .env.example  mcp_client.py  utils.py
sage-vibe-coding/: .gitignore  README.md  app.js  config-manager.js  config.template.js  index.html  styles.css  utils.js
sage-vibe-coding/references/: sage-prd.md
skills/: README.md
skills/insight-extractor/: SKILL.md
skills/insight-extractor/references/: output-format.md  pdf.md  web-article.md  youtube.md
skills/insight-extractor/scripts/: fetch_article.py  fetch_youtube.py  process_pdf.py
skills/insight-extractor/scripts/utils/: extract_pdf.py  parse_vtt.py
skills/project-pitch/: SKILL.md
skills/project-pitch/references/: frameworks.md  pptx-skill.md  slide-guidelines.md
skills/ship/: SKILL.md
skills/ship/references/: staged-workflow.md  unstaged-workflow.md
swarm-multiagent-debate-autogen-chainlit/: README.md  agents.py  app.py  evaluation-criteria.md  model_config.example.yaml  pyproject.toml  tools.py
text-charismatizer/: README.md  background.js  content.js  manifest.json  package.json  popup.html  popup.js
