[tool.poetry]
name = "ai-hub"
version = "0.1.0"
description = ""
authors = ["Tezan Sahu <tezansahu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
streamlit = "^1.41.1"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
plantweb = "^1.3.0"
autogen-agentchat = ">=0.2,<1.0"
pyautogen = {extras = ["ollama"], version = "^0.6.0"}
litellm = {extras = ["proxy"], version = "^1.55.12"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
