[tool.poetry]
name = "ai-hub"
version = "0.1.0"
description = ""
authors = ["Tezan Sahu <tezansahu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
streamlit = "^1.41.1"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
plantweb = "^1.3.0"
autogen-agentchat = ">=0.2,<1.0"
crewai = {extras = ["tools"], version = "^0.86.0"}
docling = "^2.14.0"
ipython = "^8.31.0"
markitdown = "^0.0.1a3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
